<resources>
    <string name="app_name">Tour Assistant</string>
    <string name="search_tour">Search</string>
    <string name="add">+</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">PASSWORD</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="gender">GENDER</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="address">ADDRESS</string>
    <string name="email_phone">EMAIL/PHONE</string>
    <string name="tour_assistant">Tour Assistant</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_tour_name">Tour name</string>
    <string name="create_tour_startDate">Start date</string>
    <string name="create_tour_endDate">End date</string>
    <string name="create_tour_Date_hint">Select Date</string>
    <string name="create_tour_minCost">Min cost</string>
    <string name="create_tour_maxCost">Max cost</string>
    <string name="create_tour_Adults">Adults</string>
    <string name="create_tour_Childrens">Childrens</string>
    <string name="create_tour_image">Choose tour image</string>
    <string name="create_tour_private">This is your private trip ?</string>
    <string name="create_tour_Create">Create</string>
    <string name="facebook_app_id">502760397115169</string>
    <string name="fb_login_protocol_scheme">fb502760397115169</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="name_tour_hints">Name of Tour</string>
    <string name="date_tour_hints">Start date - End Date</string>
    <string name="number_people_tour_hints">No.Adults - No.Childs</string>
    <string name="price_tour_hints">Min.Price - Max.Price</string>
    <string name="name_user_hints">Name of User</string>
    <string name="edit_profile_user">EDIT PROFILE ></string>
    <string name="user_sign_out">SIGN OUT</string>
    <string name="user_save_profile">SAVE</string>
    <string name="user_change_password">CHANGE PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="send_an_otp">SEND OTP</string>
    <string-array name="services">
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Rest Station</item>
        <item>Other</item>
    </string-array>
    <string-array name="provinces">
        <item>Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>Bình Dương</item>
        <item>Đồng Nai</item>
        <item>Khánh Hòa</item>
        <item>Hải Phòng</item>
        <item>Long An</item>
        <item>Quảng Nam</item>
        <item>Bà Rịa Vũng Tàu</item>
        <item>Đắk Lắk</item>
        <item>Cần Thơ</item>
        <item>Bình Thuận</item>
        <item>Lâm Đồng</item>
        <item>Thừa Thiên Huế</item>
        <item>Kiên Giang</item>
        <item>Bắc Ninh</item>
        <item>Quảng Ninh</item>
        <item>Thanh Hóa</item>
        <item>Nghệ An</item>
        <item>Hải Dương</item>
        <item>Gia Lai</item>
        <item>Bình Phước</item>
        <item>Hưng Yên</item>
        <item>Bình Định</item>
        <item>Tiền Giang</item>
        <item>Thái Bình</item>
        <item>Bắc Giang</item>
        <item>Hòa Bình</item>
        <item>An Giang</item>
        <item>Vĩnh Phúc</item>
        <item>Tây Ninh</item>
        <item>Thái Nguyên</item>
        <item>Lào Cai</item>
        <item>Nam Định</item>
        <item>Quảng Ngãi</item>
        <item>Bến Tre</item>
        <item>Đắk Nông</item>
        <item>Cà Mau</item>
        <item>Vĩnh Long</item>
        <item>Ninh Bình</item>
        <item>Phú Thọ</item>
        <item>Ninh Thuận</item>
        <item>Phú Yên</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Đồng Tháp</item>
        <item>Sóc Trăng</item>
        <item>Kon Tum</item>
        <item>Quảng Bình</item>
        <item>Quảng Trị</item>
        <item>Trà Vinh</item>
        <item>Hậu Giang</item>
        <item>Sơn La</item>
        <item>Bạc Liêu</item>
        <item>Yên Bái</item>
        <item>Tuyên Quang</item>
        <item>Điện Biên</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Hà Giang</item>
        <item>Bắc Kạn</item>
        <item>Cao Bằng</item>
    </string-array>
    <string name="name_of_stop_point_hint">Name\'s stop point</string>
    <string name="coordinate_of_stop_point_hint">Coordinate\'s stop point</string>
    <string name="time_of_stop_point_hint">Time\'s stop point</string>
    <string name="price_of_stop_point_hints">Min.Price - Max.Price</string>
    <string name="serviceType_stop_point_hints">Service type</string>
    <string name="title_activity_place_picker">Map</string>
    <string name="invite">Invite</string>
    <string name="join">JOIN</string>
    <string name="start_tour">Start Tour</string>
    <string name="update">Update</string>
    <string name="send_notification">SEND NOTIFICATION</string>

</resources>
