<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/full_name"/>
    <EditText
        android:id="@+id/edit_register_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textShortMessage"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"

        android:text="@string/email"/>
    <EditText
        android:id="@+id/edit_register_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/phone"/>
    <EditText
        android:id="@+id/edit_register_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/register_confirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/confirm_password"/>
    <EditText
        android:id="@+id/edit_register_confirmPass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edittext"
        android:inputType="" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_button"/>

</LinearLayout>