<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/change_current_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_radius_edittext"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/change_new_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_radius_edittext"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/change_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_radius_edittext"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <Button
                android:id="@+id/ChangePassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:text="@string/user_change_password"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>