<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    tools:context="com.ygaps.travelapp.Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:text="@string/tour_assistant"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_phone" />

            <EditText
                android:id="@+id/edit_login_username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_radius_edittext"
                android:inputType="textShortMessage"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edit_login_pasword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_radius_edittext"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <Button
                android:id="@+id/SignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/toSignUp"
                    android:text="@string/forgot_password"
                    android:onClick="forgotPassword"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Signup"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Or" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
