<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_background">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile"
                    android:background="@drawable/bg_rectangle"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="15dp"
                        android:text="@string/email"/>

                    <EditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:inputType="textShortMessage"
                        android:background="@drawable/bg_radius_edittext"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="15dp"
                        android:text="@string/phone"/>
                    <EditText
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:inputType="textShortMessage"
                        android:background="@drawable/bg_radius_edittext"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="15dp"
                        android:text="@string/address"/>
                    <EditText
                        android:id="@+id/user_address"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:inputType="textShortMessage"
                        android:background="@drawable/bg_radius_edittext"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="3">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/birthday"/>
                            <EditText
                                android:id="@+id/user_birthday"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:inputType="textShortMessage"
                                android:background="@drawable/bg_radius_edittext"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="2">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/gender"/>
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.AppCompat.Widget.DropDownItem"
                                android:hint="Choose gender">

                                <AutoCompleteTextView
                                    android:id="@+id/filled_exposed_dropdown"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>
                            </com.google.android.material.textfield.TextInputLayout>
<!--                            <com.google.android.material.textfield.TextInputLayout-->
<!--                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:hint="Choose gender">-->

<!--                                -->

<!--                            </com.google.android.material.textfield.TextInputLayout>-->
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
        </ScrollView>
    </RelativeLayout>